// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outlineStyle renders 0 1`] = `
Array [
  .c0 {
  outline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders function 1`] = `
Array [
  .c0 {
  outline-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  outline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders negative number 1`] = `
Array [
  .c0 {
  outline-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    outline-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    outline-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    outline-style: July;
  }
}

@media April {
  .c0 {
    outline-style: August;
  }
}

@media January {
  .c0 {
    outline-style: September;
  }
}

@media April {
  .c0 {
    outline-style: November;
  }
}

@media June {
  .c0 {
    outline-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    outline-style: July;
  }
}

@media April {
  .c0 {
    outline-style: August;
  }
}

@media January {
  .c0 {
    outline-style: September;
  }
}

@media April {
  .c0 {
    outline-style: November;
  }
}

@media June {
  .c0 {
    outline-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-style: January;
  }
}

@media April {
  .c0 {
    outline-style: December;
  }
}

@media January {
  .c0 {
    outline-style: April;
  }
}

@media April {
  .c0 {
    outline-style: May;
  }
}

@media June {
  .c0 {
    outline-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-style: January;
  }
}

@media April {
  .c0 {
    outline-style: December;
  }
}

@media January {
  .c0 {
    outline-style: April;
  }
}

@media April {
  .c0 {
    outline-style: May;
  }
}

@media June {
  .c0 {
    outline-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders postitive number 1`] = `
Array [
  .c0 {
  outline-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders string 1`] = `
Array [
  .c0 {
  outline-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineStyle renders valid theme path 1`] = `
Array [
  .c0 {
  outline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
